@@ -25,16 +25,14 @@ These release notes cover new developer and user-facing incompatibilities, impor
 
 * [TEZ-1509](https://issues.apache.org/jira/browse/TEZ-1509) | *Major* | **Set a useful default value for java opts**
 
-A subset of the following should be considered for the defaults:
-
--server -XX:+UseCompressedStrings -Djava.net.preferIPv4Stack=true -XX:+PrintGCDetails -verbose:gc -XX:+PrintGCTimeStamps -XX:+UseNUMA -XX:+UseParallelGC
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1500](https://issues.apache.org/jira/browse/TEZ-1500) | *Blocker* | **DAG should be created via a create method**
 
-TEZ-1246 seems to have missed DAG.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -48,9 +46,7 @@ TEZ-1246 seems to have missed DAG.
 
 * [TEZ-1469](https://issues.apache.org/jira/browse/TEZ-1469) | *Blocker* | **AM/Session LRs are not shipped to vertices in new API use-case**
 
-Previously in the tez codebase, the session LRs were part of each vertex's LRs, automatically.
-
-During 0.5.0 API changes, the following no longer provides local LRs to the vertices, even if it is part of the session LR.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -71,9 +67,7 @@ During 0.5.0 API changes, the following no longer provides local LRs to the vert
 
 * [TEZ-1449](https://issues.apache.org/jira/browse/TEZ-1449) | *Blocker* | **Change user payloads to work with a byte buffer**
 
-From discussions with [~bikassaha] and [~gopalv] - we should move the events to use bytebuffers as well.
-- This is where excessive copying can be avoided once we move to PB based RPC (or to other libraries which rely on nio)
-- Future proofing the API
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -87,23 +81,21 @@ From discussions with [~bikassaha] and [~gopalv] - we should move the events to 
 
 * [TEZ-1432](https://issues.apache.org/jira/browse/TEZ-1432) | *Blocker* | **TEZ\_AM\_CANCEL\_DELEGATION\_TOKEN is named inorrectly**
 
-TEZ\_AM\_CANCEL\_DELEGATION\_TOKEN is currently tez.am.am.complete.cancel.delegation.tokens
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1427](https://issues.apache.org/jira/browse/TEZ-1427) | *Blocker* | **Change remaining classes that are using byte[] to UserPayload**
 
-EdgeManagerPluginContext is the most important.
-SleepProcessor configuration
-All the Configurers.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1426](https://issues.apache.org/jira/browse/TEZ-1426) | *Blocker* | **Create configuration helpers for ShuffleVertexManager and TezGrouping code**
 
-This allows moving their configuration out of TezConfiguration.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -117,41 +109,21 @@ This allows moving their configuration out of TezConfiguration.
 
 * [TEZ-1423](https://issues.apache.org/jira/browse/TEZ-1423) | *Major* | **Ability to pass custom properties to keySerializer for OnFileUnorderedPartitionedKVOutput**
 
-Using OnFileUnorderedPartitionedKVOutput there is no way of passing custom properties to its keySerializer class given that this class implements Configurable. 
-
-For OnFileSortedOutput this is possible because comparatorConf and partitionerConf touching both sides, the input and the output.
-
-Possible solutions could be either passing a map to keySerializer configuration as well or have custom properties for the input and the output of an edge.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1418](https://issues.apache.org/jira/browse/TEZ-1418) | *Blocker* | **Provide Default value for TEZ\_AM\_LAUNCH\_ENV and TEZ\_TASK\_LAUNCH**
 
-As part of the fix for the issue TEZ-1127 two new configurations have  been introduced:
-# \_TEZ\_AM\_LAUNCH\_ENV\_
-# \_TEZ\_TASK\_LAUNCH\_
-
-Ideally these properties should be configured with default value of:
-"LD\_LIBRARY\_PATH=$HADOOP\_COMMON\_HOME/lib/native"
-
-as in the case for \_mapreduce.admin.user.env\_
-
-The default value for these properties are set to "" (empty string).
-Now user has to explicitly set these values from the application code to use the native libs (like for compression).
-
-From Hitesh:
-{quote}As commented on TEZ-1127, it is a question as to what the default should be - whether HADOOP\_COMMON\_HOME or HADOOP\_PREFIX and to some extent, it needs to handle Windows deployments too.{quote}
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1417](https://issues.apache.org/jira/browse/TEZ-1417) | *Blocker* | **Rename \*Configurer**
 
-From offline feedback from [~bikassaha], [~acmurthy] and [~hagleitn] - this needs to be renamed.
-Something like Configurator as Bikas had earlier suggested, or ConfigBuilder which I like more.
-
-This can be done as a last refactor before 0.5 since it's very disruptive to patches in progress.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -165,7 +137,7 @@ This can be done as a last refactor before 0.5 since it's very disruptive to pat
 
 * [TEZ-1410](https://issues.apache.org/jira/browse/TEZ-1410) | *Blocker* | **DAGClient#waitForCompletion() methods should not swallow interrupts**
 
-Based on TEZ-1331 i found that the 3 waitForCompletion() methods of DAGClient swallowing interrupts as well. That way you never can stop the wait call since all interrupts are caught and the wait logic just happily proceeds (same as TEZ-1278).
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -179,20 +151,7 @@ Based on TEZ-1331 i found that the 3 waitForCompletion() methods of DAGClient sw
 
 * [TEZ-1400](https://issues.apache.org/jira/browse/TEZ-1400) | *Major* | **Reducers stuck when enabling auto-reduce parallelism (MRR case)**
 
-In M -\> R1 -\> R2 case, if R1 is optimized by auto-parallelism R2 gets stuck waiting for events.
-
-e.g
-
-Map 1: 0/1      Map 2: -/-      Map 5: 0/1      Map 6: 0/1      Map 7: 0/1      Reducer 3: 0/23 Reducer 4: 0/1
-...
-...
-Map 1: 1/1      Map 2: 148(+13)/161     Map 5: 1/1      Map 6: 1/1      Map 7: 1/1      Reducer 3: 0(+3)/3      Reducer 4: 0(+1)/1  \<== Auto reduce parallelism kicks in
-..
-Map 1: 1/1      Map 2: 161/161  Map 5: 1/1      Map 6: 1/1      Map 7: 1/1      Reducer 3: 3/3  Reducer 4: 0(+1)/1
-
-Job is stuck waiting for events in Reducer 4.
-
- [fetcher [Reducer\_3] #23] org.apache.tez.runtime.library.common.shuffle.impl.ShuffleScheduler: copy(3 of 23 at 0.02 MB/s) \<=== \*Waiting for 20 more partitions, even though Reducer3 has been optimized to use 3 reducers
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -206,15 +165,14 @@ Job is stuck waiting for events in Reducer 4.
 
 * [TEZ-1390](https://issues.apache.org/jira/browse/TEZ-1390) | *Blocker* | **Replace byte[] with ByteBuffer as the type of user payload in the API**
 
-This is just and API change. Internally we can continue to use byte[] since thats a much bigger change.
-The translation from ByteBuffer to byte[] in the API layer should not have perf impact.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1382](https://issues.apache.org/jira/browse/TEZ-1382) | *Blocker* | **Change ObjectRegistry API to allow for future extensions**
 
-Per comments on https://issues.apache.org/jira/browse/TEZ-1153
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -228,63 +186,42 @@ Per comments on https://issues.apache.org/jira/browse/TEZ-1153
 
 * [TEZ-1351](https://issues.apache.org/jira/browse/TEZ-1351) | *Major* | **MROutput needs a flush method to ensure data is materialized for FileOutputCommitter**
 
-In MROutput.commit, we need to check isCommitRequired before invoking commitTask.
-
-Currently we did this check inside Pig:
-{code}
-                if (fileOutput.isCommitRequired()) {
-                    fileOutput.commit();
-                }
-{code}
-However, in some loader, output file is generated only after fileOutput.close, which is part of fileOutput.commit. The isCommitRequired check is too early. A walk around is to invoke fileOutput.close before isCommitRequired:
-{code}
-                fileOutput.close();
-                if (fileOutput.isCommitRequired()) {
-                    fileOutput.commit();
-                }
-{code}
-But we are told there is a plan to make MROutput.close private.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1347](https://issues.apache.org/jira/browse/TEZ-1347) | *Blocker* | **Consolidate MRHelpers**
 
-- Remove methods which don't belong in MRHelpers and potentially move them to TezHelpers.
-- Get rid of methods which we don't expect/want users to use.
-- Get rid of multiple variants of the same method, if these exist.
-- Investigate other cleanup in MRHelpers.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1346](https://issues.apache.org/jira/browse/TEZ-1346) | *Blocker* | **Change Processor construction to make use of contexts**
 
-TEZ-1303 made changes for Inputs, Outputs etc but missed the Processor. This is a follow up to change the Processor interface.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1334](https://issues.apache.org/jira/browse/TEZ-1334) | *Blocker* | **Annotate all non public classes in tez-runtime-library with @private**
 
-This prevents javadoc from being generated.
-Alternative would be to mark classes explicitly public using annotation.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1320](https://issues.apache.org/jira/browse/TEZ-1320) | *Blocker* | **Remove getApplicationId from DAGClient**
 
-We should either get rid of this, or convert it to a String. Not sure why this API needs to be exposed.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1317](https://issues.apache.org/jira/browse/TEZ-1317) | *Blocker* | **Simplify MRinput/MROutput configuration**
 
-Should at least be possible to generate the correct Descriptors.
-
-Potentially change the addInput / addOutput APIs to accept a single entity which encapsulates InputDescriptor and InputInitializerDescriptor. Similarly for Outputs.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -319,29 +256,7 @@ Potentially change the addInput / addOutput APIs to accept a single entity which
 
 * [TEZ-1278](https://issues.apache.org/jira/browse/TEZ-1278) | *Blocker* | **TezClient#waitTillReady() should not swallow interrupts**
 
-Current code is:
-{code}
-  while (true) {
-      TezAppMasterStatus status = getAppMasterStatus();
-      if (status.equals(TezAppMasterStatus.SHUTDOWN)) {
-        throw new SessionNotRunning("TezSession has already shutdown");
-      }
-      if (status.equals(TezAppMasterStatus.READY)) {
-        return;
-      }
-      try {
-        Thread.sleep(SLEEP\_FOR\_READY);
-      } catch (InterruptedException e) {
-        LOG.info("Sleep interrupted", e);
-        continue;
-      }
-    }
-{code}
-That way you never can stop the wait call since all interrupts are caught and the wait logic just happily proceeds.
-
-\*Suggestion\*: InterruptedException could be part of the method signature so the caller can handle this in a way which is adequate to the context.
-
-Nice read on handling interrupts: http://www.ibm.com/developerworks/library/j-jtp05236/
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -355,16 +270,14 @@ Nice read on handling interrupts: http://www.ibm.com/developerworks/library/j-jt
 
 * [TEZ-1269](https://issues.apache.org/jira/browse/TEZ-1269) | *Major* | **TaskScheduler prematurely releases containers**
 
-It checks for session mode and if not true, and if there are no outstanding requests, then it releases the containers before the container timeout has expired. If the state machine is on its way to scheduling new tasks during this time then they will not be able to reuse these containers.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1266](https://issues.apache.org/jira/browse/TEZ-1266) | *Major* | **Create \*EdgeConfigurer.createDefaultCustomEdge() and force setting partitioners**
 
-Reference https://issues.apache.org/jira/browse/TEZ-1080?focusedCommentId=14054194&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-14054194 from TEZ-1080
-
-cc [~sseth]
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -378,7 +291,7 @@ cc [~sseth]
 
 * [TEZ-1237](https://issues.apache.org/jira/browse/TEZ-1237) | *Blocker* | **Consolidate naming of API classes**
 
-The user component for Vertex is called 'VertexManagerPlugin', for the edge it's just called 'EdgeManager'. This jira is to use a similar naming convention.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -392,12 +305,7 @@ The user component for Vertex is called 'VertexManagerPlugin', for the edge it's
 
 * [TEZ-1231](https://issues.apache.org/jira/browse/TEZ-1231) | *Blocker* | **Clean up TezRuntimeConfiguration**
 
-Separate configs used by runtime Inputs/Outputs and framework specific configs As an example - task memory configs are not related to any Input / Output. Similarly for Credentials.
-
-Other possible config changes
-- Rename TEZ\_RUNTIME\_INPUT\_BUFFER\_PERCENT, which is a fairly confusing name
-- Get rid of the separation between INPUT/OUTPU in config names (e.g. INPUT\_KEY, OUTPUT\_KEY replaced with just KEY)
-- Move TEZ\_RUNTIME\_INTERMEDIATE\_INPUT\_KEY\_SECONDARY\_COMPARATOR\_CLASS to MapReduce
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -411,9 +319,7 @@ Other possible config changes
 
 * [TEZ-1194](https://issues.apache.org/jira/browse/TEZ-1194) | *Blocker* | **Make TezUserPayload user facing for payload specification**
 
-Now that we have TezUserPayload being used internally to represent user payload it may be useful to make it user facing on the API for specifying payloads. Advantages
-1) Clear code for the user instead of having untyped byte[] everywhere
-2) Lets us internally evolve the representation of user payload and make it more efficient without having to break APIs. We can start with TezUserPayload(byte[]) and then move on to TezUserPayload(ByteBuffer) and so on while maintaining backwards compatibility without needing to add new methods. Old code can be translated within TezUserPayload while user migrates the code.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -427,7 +333,7 @@ Now that we have TezUserPayload being used internally to represent user payload 
 
 * [TEZ-1137](https://issues.apache.org/jira/browse/TEZ-1137) | *Major* | **Move TezJobConfig to runtime-library and rename to TezRuntimeConfiguration**
 
-Its currently sitting in the API project. Some values from here may need to move to TezConfiguration.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -448,39 +354,35 @@ Its currently sitting in the API project. Some values from here may need to move
 
 * [TEZ-1132](https://issues.apache.org/jira/browse/TEZ-1132) | *Blocker* | **Consistent naming of Input and Outputs**
 
-Some places we should Sorted Partitioned. In others we should Shuffled. We should use a consistent naming scheme based on Sorted, Grouped, Partitioned sub-terms so that the function is clear from the name.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1131](https://issues.apache.org/jira/browse/TEZ-1131) | *Major* | **Simplify EdgeManager APIs**
 
-2 pieces of feedback from [~daijy] 
-1) Its not clear the event.sourceIndex needs to be accessed. Solution - Make it part of the method parameters
-2) the Map\<InputIndex, List\<TaskIndex\>\> is convoluted. Solution - Replace with Map\<TaskIndex, InputIndex\>. Amazing why we did not do this in the first place.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1130](https://issues.apache.org/jira/browse/TEZ-1130) | *Major* | **Replace confusing names on Vertex API**
 
-Make it language agnostic.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1127](https://issues.apache.org/jira/browse/TEZ-1127) | *Major* | **Add TEZ\_TASK\_JAVA\_OPTS and TEZ\_ENV configs to specify values from config**
 
-There is no global setting available to specify JVM parameters for tez tasks (e.g: specifying native library location with java.library.path). Yarn allows specifying application.classpath, but not java opts. The only option right now is to set mapreduce.map.java.opts in the tez job config (or hive.tez.java.opts for Hive on Tez).
-
-Suggestion from Bikas, while discussing this in tez-user group, is tez should have "TEZ\_TASK\_JAVA\_OPTS so that you don’t have to specify this via mapreduce configuration parameters"
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1058](https://issues.apache.org/jira/browse/TEZ-1058) | *Blocker* | **Replace user land interfaces with abstract classes**
 
-Similar to Input/Processor/Output, there are other interfaces that users may implement. These should move to abstract classes for better compatibility management and sharing common basic functionality in the base abstract class.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -494,47 +396,42 @@ Similar to Input/Processor/Output, there are other interfaces that users may imp
 
 * [TEZ-1055](https://issues.apache.org/jira/browse/TEZ-1055) | *Blocker* | **Rename tez-mapreduce-examples to tez-examples**
 
-And also the internal classes where applicable to remove MR references.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1041](https://issues.apache.org/jira/browse/TEZ-1041) | *Blocker* | **Use VertexLocationHint consistently everywhere in the API**
 
-VertexLocationHint is used internally and not by end users.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1038](https://issues.apache.org/jira/browse/TEZ-1038) | *Major* | **Move TaskLocationHint outside of VertexLocationHint**
 
-We could also use this to rename TaskLocation.getDataLocalHosts() to just TaskLocation.getHosts(). Data locality, while relevant, is not necessary.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1025](https://issues.apache.org/jira/browse/TEZ-1025) | *Major* | **Rename tez.am.max.task.attempts to tez.am.task.max.failed.attempts**
 
-The usage of the value is to determine the number of failed attempts that will be tolerated before failing the job. A rename to add failed in the config string will help clear the confusion. This will be an incompatible change.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-1018](https://issues.apache.org/jira/browse/TEZ-1018) | *Major* | **VertexManagerPluginContext should enable assigning locality to scheduled tasks**
 
-This may be used by VertexManager to decide the location of their tasks depending on the location of source tasks.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-960](https://issues.apache.org/jira/browse/TEZ-960) | *Minor* | **Typos in MRJobConfig**
 
-{code}
-MR\_TEZ\_INPUT\_INITIALIZER\_SERIALIZE\_EVENT\_PAYLAOD,
-MR\_TEZ\_INPUT\_INITIALIZER\_SERIALIZE\_EVENT\_PAYLAOD\_DEFAULT
-
-VertexManagerPluginContext getTotalAVailableResource
-{code}
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
@@ -548,14 +445,14 @@ VertexManagerPluginContext getTotalAVailableResource
 
 * [TEZ-696](https://issues.apache.org/jira/browse/TEZ-696) | *Major* | **Remove implicit copying of processor payload to input and output**
 
-In the task, the processor payload is implicitly copied to the input and output if they dont have one. While this may have been convenient in some cases, its very confusing when things dont work or when they surprisingly work. Also, its probably clearer to specify payload where appropriate so that its clear which one is for which. While writing the word count example I had to spend a lot of time debugging why my outputs had stopped working when I removed the map reduce confs from my non-MR processors.
+**WARNING: No release note provided for this incompatible change.**
 
 
 ---
 
 * [TEZ-692](https://issues.apache.org/jira/browse/TEZ-692) | *Major* | **Unify job submission in either TezClient or TezSession**
 
-Its confusing to have 2 ways to create and submit a tez job. The developer has to spend time thinking about and deciding which method to use.
+**WARNING: No release note provided for this incompatible change.**
 
 
 
